--- a/package.json
+++ b/package.json
@@ -17,26 +17,31 @@
     "axios": "^0.21.1",
     "bigint-conversion": "^2.1.12",
     "bip39": "^3.0.4",
+    "buffer": "6.0.3",
+    "crypto-browserify": "3.12.0",
     "ethereum-blockies-base64": "^1.0.2",
     "json-bigint": "^1.0.0",
+    "process": "0.11.10",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-timestamp": "^5.1.0",
     "sjcl": "^1.0.8",
     "starkbank-ecdsa": "^1.1.2",
+    "stream-browserify": "3.0.0",
+    "tweetnacl": "1.0.3",
     "use-file-picker": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "prebuild": "react-scripts build && serve -s build",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "serve": "react-app-rewired build && serve -s build",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +64,9 @@
     ]
   },
   "devDependencies": {
+    "react-app-rewired": "2.2.1",
     "redux": "^4.1.0",
-    "webpack": "4.44.2"
+    "serve": "13.0.2",
+    "webpack": "5.72.1"
   }
 }
