--- a/package.json
+++ b/package.json
@@ -3,46 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dfinity/agent": "0.9.3",
-    "@dfinity/auth-client": "0.9.3",
-    "@dfinity/authentication": "0.9.3",
-    "@dfinity/identity": "0.9.3",
-    "@dfinity/principal": "0.9.3",
-    "@fontsource/roboto": "^4.4.5",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@dfinity/agent": "0.19.2",
+    "@dfinity/auth-client": "0.19.2",
+    "@dfinity/candid": "0.19.2",
+    "@dfinity/identity": "0.19.2",
+    "@dfinity/principal": "0.19.2",
+    "@fontsource/roboto": "^4.5.8",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@psychedelic/dab-js": "^1.4.4",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@toruslabs/openlogin": "^0.9.0",
-    "axios": "^0.21.1",
-    "bigint-conversion": "^2.1.12",
-    "bip39": "^3.0.4",
-    "dotenv": "^16.0.1",
+    "@toruslabs/openlogin": "^0.9.5",
+    "axios": "^0.21.4",
+    "bigint-conversion": "^2.4.2",
+    "bip39": "^3.1.0",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.3.1",
     "ethereum-blockies-base64": "^1.0.2",
     "json-bigint": "^1.0.0",
+    "pbkdf2": "^3.1.2",
+    "postinstall-postinstall": "^2.1.0",
+    "process": "^0.11.10",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-timestamp": "^5.1.0",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
+    "react-timestamp": "^5.3.0",
     "sjcl": "^1.0.8",
-    "starkbank-ecdsa": "^1.1.2",
-    "use-file-picker": "^1.3.0",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
+    "starkbank-ecdsa": "^1.1.5",
+    "use-file-picker": "^1.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "prebuild": "react-scripts build",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "prebuild": "react-app-rewired build",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -65,8 +63,15 @@
     ]
   },
   "devDependencies": {
-
-    "redux": "^4.1.0",
-    "webpack": "4.44.2"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "patch-package": "^6.4.7",
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1"
+  },
+  "browser": {
+    "crypto": false
   }
 }
